--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "axion": "^0.1.0",
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
